# multiprocessing_lib

./: .gitignore  README.md  benchmark.py  mp_dist.py  mp_lock.py  mp_queue.py  run.py  run_api.py  setup.cfg
examples/: dummy.py  dummy_double.py  resize_images.py  run_api.py
src/doc_ock/: dot_dict.py  mp_dist.py  mp_lock.py  mp_queue.py  resize_images.py  utils.py
src/tests/: test_correctness.py  test_error_handling.py
tests/: test_correctness.py  test_error_handling.py
workers/: run_face_detection.py
