[metadata]
name = doc_ock
version = 0.0.3
author = Guilherme Fickel
author_email = guilhermefickel@gmail.com
description = A very small multiprocessing library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gfickel/multiprocessing_lib
project_urls =
    Bug Tracker = https://github.com/gfickel/multiprocessing_lib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    tqdm

[options.packages.find]
where = src
